<resources>
    <string name="app_name">库内PDA</string>
    <string name="request401">用户认证错误,请重新登录后重试。</string>
    <string name="request404">访问错误。</string>

    <string name="size_25p">25%w</string>
    <string name="size_50p">50%w</string>
    <string name="size_5w_h">5.5%w</string>
    <string name="size_10w_h">8.5%w</string>

    <string name="size_6w">6.6%w</string>
    <string name="size_5w">4.5%w</string>
    <string name="size_4w">4%w</string>
    <string name="title_menu_height_percent">12%w</string>

    <string name="size_5_5w">5.5%w</string>

    <string name="margin_5w">5%w</string>
    <string name="margin_2w">2%w</string>
    <string name="item_padding_3w">3%w</string>
    <string name="username_hint">输入帐号</string>
    <string name="password_hint">输入密码</string>
    <string name="login">登  录</string>
    <string name="notempty">用户名或密码不能为空</string>
    <string name="not_null">不能为空!</string>
    <string name="keyCode_back">再按一次退出程序</string>
    <string name="parse_error">获取数据有误请与技术联系。</string>
    <string name="index_hint">扫描单号、容器号搜索</string>
    <string name="submit">提\t交</string>
    <string name="photo">拍照</string>
    <string name="index">首页</string>
    <string name="setting">设置</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing_now">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="no_user">请登录</string>
    <!-- 绑定区域 -->
    <string name="areabind">绑定区域</string>
    <string name="bind">绑定</string>
    <string name="lanshouno">揽收单号/揽收箱号：</string>
    <string name="areacode">区域条码：</string>
    <string name="bind_order">绑定揽收单</string>
    <string name="taking">收货</string>
    <string name="count">清点</string>

    <!-- 打印揽收单 -->
    <string name="printlanshou">打印揽收单</string>
    <string name="print">打\t印</string>
    <string name="printsame">打印相同箱号</string>
    <string name="printnew">打印新的箱号</string>

    <string name="taking_error">该批入库商品未匹配到预报单，请手动选择。</string>
    <string name="taking_edit">点击此处进行编辑</string>
    <string name="taking_discript_commit">该预报单已完成揽收提交</string>
    <string name="taking_discript_save">该预报单已暂存</string>

    <string name="print_list">打印揽收单</string>
    <string name="request_error">请求失败,请稍后重试!</string>
    <string name="callBack_error">回调方法有误,请联系技术!</string>
    <string name="successCallBack_error">返回错误!</string>

    <string name="count_bussiness_input">请选择商家:</string>
    <string name="select_bussiness">选择商家</string>
    <string name="edt_input_business_hint">可输入,可扫码.搜索所有商家</string>
    <string name="tv_bussiness">商 家：</string>
    <string name="tv_count_mission">待清点任务：</string>

    <string name="tv_count_num">清点单号</string>
    <string name="tv_last_time">截止时间</string>
    <string name="tv_status">状态</string>

    <string name="operate_vessl">待操作容器：</string>
    <string name="count_num">清点单号：</string>
    <string name="last_time">截止时间：</string>

    <string name="area">区 域：</string>
    <string name="area_toast">区域不能为空</string>
    <string name="check_map">查看地图</string>

    <!-- 揽收 -->
    <string name="taking_no_empty">\"揽收单号/揽收箱号\"不能为空</string>
    <string name="taking_area_empty">\"区域条码\"不能为空</string>
    <string name="taking_bind_suc">绑定成功</string>
    <string name="taking_bind_fal">绑定失败</string>
    <string name="taking_bind_no">没有绑定容器</string>
    <string name="taking_bind_count">待绑定订单的容器号</string>
    <string name="taking_upload_suc">上传成功</string>
    <string name="taking_upload_fal">上传失败</string>
    <string name="taking_submit_suc">提交成功</string>
    <string name="taking_submit_fal">提交失败</string>
    <string name="taking_upload_empty">揽收箱号不能为空</string>
    <string name="taking_upload_empty_p">照片不能为空</string>
    <string name="taking_upload_photo_count">照片不能超过10张</string>
    <string name="select_merchant">请选择商家：</string>
    <!-- 揽收 -->
    <string name="taking_task">揽收任务</string>
    <string name="tv_taking_mission">待揽收任务：</string>
    <string name="tv_taking_num">揽收单号：</string>
    <string name="tv_taking_num_1">揽收单号</string>
    <string name="taking_print_no">打印揽收单</string>
    <string name="taking_scan_no">扫描容器号(绑定订单/搜索)</string>
    <string name="box_size">箱 数：</string>
    <string name="box_size_toast">请输入箱数</string>
    <string name="print_num">打印数量：</string>
    <string name="taking_predictcode">物流号码/揽收单号：</string>
    <string name="scan_logistics">扫描物流号</string>
    <string name="taking_isExist">该揽收单不存在。</string>
    <string name="more">更多</string>
    <string name="commit_success">提交成功</string>
    <string name="check_taking_info">查看揽收容器信息</string>
    <string name="check_counting_info">查看清点容器信息</string>
    <string name="operation_history">最近操作纪录：</string>
    <string name="operation_man">操作人：</string>
    <string name="time">时 间：</string>
    <string name="last_page">已经是最后一页了!</string>
    <string name="mission_assign">未开始</string>
    <string name="mission_excute">进行中</string>
    <string name="mission_close">已完成</string>
    <string name="recivier">收件人:</string>
    <string name="recivier_hint">请输入收件人姓名</string>
    <string name="co">用户编码：</string>
    <string name="co_hint">请输入用户编码</string>
    <string name="co_recivier_not">用户编码和收件人不能为空</string>



    <!-- 清点 -->
    <string name="count_task">清点任务</string>
    <string name="count_area">区域：</string>
    <string name="count_vessel_no">容器号：</string>
    <string name="count_no">清点单号：</string>
    <string name="count_print_no">打印清点单</string>
    <string name="count_now_no">现容器号：</string>
    <string name="count_old_no">原容器号：</string>
    <string name="count_track_no">追踪箱号</string>
    <string name="count_box_no">清点箱号：</string>
    <string name="upc">UPC：</string>
    <string name="amount">数量：</string>
    <string name="sign_exception">标记异常</string>
    <string name="count_vessel_empty">容器号不能为空</string>
    <string name="count_upc_empty">upc不能为空</string>

    <string name="taking_num">揽收容器号：</string>
    <string name="taking_num_toast">揽收容器号不能为空</string>
    <string name="count_num_toast">清点容器号不能为空</string>
    <string name="count_order_toast">清点单号不能为空</string>
    <string name="count_upc_toast">UPC不能为空</string>
    <string name="count_container_no">清点容器号：</string>
    <string name="unbind">解 绑</string>
    <string name="count_length">数 量：</string>
    <string name="upc_code">UPC：</string>
    <string name="upc_empty">UPC不能为空</string>
    <string name="bussiness">商 家：</string>
    <string name="count_bind">绑定清点单</string>
    <string name="count_bind_count">待绑定清点单的容器号</string>

    <string name="print_hint">请到设置中连接打印机.</string>
    //打印
    <string name="print_title">BTPrinter</string>
    <!--BTPrinterDemo-->
    <string name="send">Send</string>
    <string name="Print">Print</string>
    <string name="Clear">Clear</string>
    <string name="not_connected">Please Connect BT Printer. (Menu->Connect)</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Printer Demo.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="default_font_gray_scale">4</string>
    <string name="fontGrayscaleName">font gray scale</string>
    <string name="fontGrayScaleRange">(1~8)</string>
    <string name="PrintContent">
~DG000.GRF,03200,020,
,:M0gI2,K0140017I760K017J7I070,K07C001FIFE0L0KFI078,J01D40015D5D40L05D5D50H05D,J07FC001FIFE0L0KFI07F80,J0H740017I760L0K7I0H740,I01FF8001FIFE0L0KFI07FE0,I0155400155D540L0H5D550H0H5D0,I03FF8001FIFE0L0JFE0H07FF8,I0I740017I760L0K7I0I74,I0IFC001FIFE0L0JFE0H07FFC,I0D5D40015D5D40L05D5D40H05D54,H01FHFC001FIFE0L0JFE0H07FFE,H017H740017I760L0J740H0J7,H01FHFC0H0JFE0L0JFE0H0JF,H015H5C0H0J540L0D5H540H0J5,H03FHFC0H0JFE0L0JFE0H0JF,H017H740H0J760L0J740H0J7,H03FHFE0H0JFE0L0JFC0H0JF,H01D5D40H05D5D40L05D5D4001D55D,H03FHFE0H07FHFE0L0JFC001FIF,H027I7I057H760K017I740017I7,H02FHFE0H07FHFE0L0JF8001FHFE,I05D550H0H5D5C0K01D5D5800155D4,H02FIFI03FHFE0K01FIF8003FHFE,H027I7I037H760K017I7I037H74,H027FHF8003FHFE0K01FIFI03FHFC,I0H5D58001D5DC0K015D5D0H015D5C,H023FHF8003FHFE0K03FIFI03FHF8,H0237H7I017I7L017I7I0J70,H023FHF8001FIFL03FHFE0H0JF8,I015H540015I5L015H540H0J50,H023FHFE001FIFL03FHFE0H0JF8,H0217H760H0J7L037H760017H760,H020FHFE0H0JF80J03FHFE003FHFE0,J0HD5D0H0D5D50K015D5C001D5D40,H0207FHF800FIF80J03FHF8003FHFC0,H0207I7I0J7L037H7I037H780,H0203FHF8003FHF80J03FHF8007FHF80,J015H5C001D550K0155D0H0J5,H0203FHFC003FHF80I023FHF800FIF,H02017H740037H7L0J7I0J7,H0200FHFE003FHF80J07FFE0H0IFE,K0H5D50015D580J0H5D40015D5C,H02003FHFI0IF80J0IFE003FHF8,H020017H7I0I740J0I740037H70,H02001FHF800FHFC0J0IFC007FHF0,K015H54005H540J05D54005H540,H020H0IFE007FFE0J0IFC02FHFE0,H020H0I76007H740J0I7H017H740,H020H03FFE007FFE0J0IF801FHF80,L0155D001D5C0J0D5D001D5D,H020I0IF803FFE0J0IFH03FFE,H020I0I7H017760I017H7H0I74,H020I07FFE00FFE0I01FFE00FHFC,M01D54005540I0155C00D5D0,H020I01FHFH0HFE0I01FFC01FHF0,H020I017H7H0I7J01774017760,H020J07FF807FF0I01FF807FFC0,N01D5C015D0I01D58055D,H020J03FFE03FF0I03FF80FHF80,H020K0I703770I037501776,H020K0IF03FF80H03FE01FFC,O015501550I0H54015D0,H020K01FF80FF80H07FE0FHF0,H020L0H740770I0H7407740,H020L03FE07FC0H07F80FF80,P01D405D40H05D015D,H020M0HF83FC0H0HF83FE,H020M0H741740H0H70770,H020M03FC1FC0H0FE0FF8,R0D415C0H0D41DC0,H020N0HF0FE001FE3FE0,H020N0170760017477,H020O0FC7E001F8FE,S05455001505C,H020O03E3F003F3F8,H020O017170017360,H020P039F803E780,T014500145,H020P02EF803FE,H020Q01700710,H020Q01BAAFB8,T0515D551D40,H020N03E010FFE1FHF80,H020N07001055017H740,H020M0F80020J0BFHFE,P0140N0155D5,H020L0F80H020J0800FHF0,H020K0H740017L7H0I74,H020K0HFC002808080B00FHFE80,N05D50Q01DD5540,H020J0IFI020L083FIFE0,H020I017740Q0H760074,H020I0HFE80P08FF8003E,L015540R0H5I015,H020H070N0C0H0E08FF8001FE0,H020H060L04140H0600770I0H70,H02003C0FE0I040C0H0C08FF0I0HF8,K0545DD0I04040H0400540I0H5C,H0200FJF80H040E0H08003E0I0IF,H02017J7J04070010M017H7,H0203FJF80H0C0300380L03FHFC0,J0D5H5D50I04010040040I015I5C0,H023FJFE0I0C00FF80042BFMF8,H0237J740I0400170H057O74,H027FJF80I0C0L07FOFE,I0H5D5540J040L05D5D5D5D5D5D,H03FIFE80J080L07FPF,H017I7U057P7,H01FHFC0L080L07FPF,H015D40U0R5,H01FFE20L080L03FOFE,H01770V037O74,I0FE0N080L03FOFC,I0540V01D5D5D5D5D54,I03E0N080L03FOF8,I0540V017O70,J0E0N080L03FNFE0,J040N080L015D5H5D5H5C0,I0120N0C0L07FNFE0,T017V7,J040U07FOF,gG0H5D5D5D5D5C,K0A0T03FNF0,K010T037M740,M0gHA8,,::::::::::::::::::::::::::::::^XA
^MMT
^PW591
^LL0406
^LS0
^FT32,192^XG000.GRF,1,1^FS
^FO378,4^GB0,182,1^FS
^FO3,183^GB585,0,2^FS
^FT226,388^A0N,17,16^FH\^FD2016-12-21^FS
^FT389,120^A0N,20,21^FH\^FDAA16061418-00001^FS
^FT24,222^A0N,25,24^FH\^FDRONGQIHAO^FS
^FT393,71^A0N,23,24^FH\^FDDANHAO:^FS
^FT506,381^A0N,34,38^FH\^FD5^FS
^FT462,387^A0N,14,16^FH\^FDQTY:^FS
^FT183,145^A0N,42,45^FH\^FDLANSHOU^FS
^FT177,386^A0N,14,16^FH\^FDTIME:^FS
^FT79,386^A0N,14,16^FH\^FDZHANG^FS
^FT27,385^A0N,14,16^FH\^FDUSER:^FS
^FT184,77^A0N,37,38^FH\^FDTSJ^FS
^BY2,3,81^FT110,321^BCN,,Y,N
^FD>:HKTS>5201606140000>61^FS
^PQ1,0,1,Y^XZ
^XA^ID000.GRF^FS^XZ
</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect BT Printer</string>
    <string name="disconnect">Disconnect BT Printer</string>
</resources>
