<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.pda.birdex.pda.widget.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_marginTopPercent="@string/margin_5w"
        app:layout_paddingLeftPercent="@string/item_padding_3w"
        app:layout_paddingRightPercent="@string/item_padding_3w">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bussiness"
            android:textColor="@color/context_1"
            app:layout_paddingBottomPercent="@string/margin_5w"
            app:layout_paddingTopPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_6w" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spin_bussiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taking_error"
            android:textColor="@color/red"
            app:layout_paddingBottomPercent="@string/margin_5w"
            app:layout_paddingTopPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_5w" />
        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/btn_commit"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rect_fullbluew_selector"
                android:text="@string/submit"
                android:textColor="@color/btn_blue_selector"
                app:layout_textSizePercent="@string/size_6w" />
        </com.zhy.android.percent.support.PercentRelativeLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>
</com.zhy.android.percent.support.PercentLinearLayout>