<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/pll_count_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_paddingPercent="@string/item_padding_3w">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_num"
            android:textColor="@color/context_1"
            app:layout_textSizePercent="@string/size_6w" />

        <TextView
            android:id="@+id/tv_count_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/context_2"
            app:layout_paddingTopPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_6w" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_paddingPercent="@string/item_padding_3w">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_now_no"
            android:textColor="@color/context_1"
            app:layout_paddingBottomPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_6w" />


        <com.pda.birdex.pda.widget.ClearEditText
            android:id="@+id/edt_count_now_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textColor="@color/context_2" />

    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_paddingPercent="@string/item_padding_3w"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_old_no"
            android:textColor="@color/context_1"
            app:layout_paddingBottomPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_6w" />

        <com.pda.birdex.pda.widget.ClearEditText
            android:id="@+id/edt_count_old_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:textColor="@color/context_2" />

    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rect_fullbluew_selector"
            android:text="@string/submit"
            android:textColor="@color/btn_blue_selector"
            app:layout_marginBottomPercent="@string/size_5w"
            app:layout_textSizePercent="@string/size_6w" />
    </com.zhy.android.percent.support.PercentRelativeLayout>
</com.zhy.android.percent.support.PercentLinearLayout>