<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:id="@+id/pll_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray">

        <TextView
            android:id="@+id/tv_clear_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_count_num"
            android:textColor="@color/context_2"
            app:layout_paddingPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_5w" />

        <TextView
            android:id="@+id/tv_last_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_last_time"
            android:textColor="@color/context_2"
            app:layout_paddingPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_5w" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_status"
            android:textColor="@color/context_2"
            app:layout_paddingPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_5w" />
        <TextView
            android:id="@+id/tv_status_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_status"
            android:textColor="@color/context_2"
            app:layout_paddingPercent="@string/item_padding_3w"
            android:visibility="gone"
            app:layout_textSizePercent="@string/size_5w" />
    </com.zhy.android.percent.support.PercentLinearLayout>


    <include
        layout="@layout/single_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</com.zhy.android.percent.support.PercentLinearLayout>