<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_paddingPercent="@string/item_padding_3w"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_vessel_no"
            android:textColor="@color/context_1"
            app:layout_textSizePercent="@string/size_6w" />

        <TextView
            android:id="@+id/tv_vessel_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/context_2"
            app:layout_marginTopPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_6w" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_paddingPercent="@string/item_padding_3w"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storage_order"
            android:textColor="@color/context_1"
            app:layout_textSizePercent="@string/size_6w" />

        <TextView
            android:id="@+id/tv_storage_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/context_2"
            app:layout_marginTopPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_6w" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_paddingPercent="@string/item_padding_3w">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_bussiness"
            android:textColor="@color/context_1"
            app:layout_textSizePercent="@string/size_6w" />

        <TextView
            android:id="@+id/tv_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/context_1"
            app:layout_marginTopPercent="@string/item_padding_3w"
            app:layout_textSizePercent="@string/size_6w" />
    </com.zhy.android.percent.support.PercentLinearLayout>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rect_fullbluew_selector"
            android:text="@string/print"
            android:textColor="@color/btn_blue_selector"
            app:layout_marginBottomPercent="@string/size_5w"
            app:layout_textSizePercent="@string/size_6w" />
    </com.zhy.android.percent.support.PercentRelativeLayout>

</com.zhy.android.percent.support.PercentLinearLayout>