<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pda.birdex.pda.widget.TitleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_paddingPercent="@string/margin_5w">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_bussiness_input"
            app:layout_textSizePercent="@string/size_7w"/>
        <com.pda.birdex.pda.widget.ClearEditText
            android:id="@+id/edt_input_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_input_business_hint"
            android:imeOptions="actionSearch"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>